Assignment with figures - Final

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -57,6 +57,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
+<pre class="r"><code>knitr::opts_chunk$set(fig.path='Figs/')</code></pre>
 <div id="loading-and-preprocessing-the-data" class="section level2">
 <h2>Loading and preprocessing the data</h2>
 <p>First, we need to load the data. The code below assumes you have downloaded the data file into your R working directory.The data is available for download from this website: <a href="https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip">https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip</a></p>
